src/styles/container.css
html,
body {
  margin: 0px;
  height: 100%;
  width: 100%;
}

#container {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  align-items: center;
}

#headerAndSocialsWrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-bottom: 2em;
}
#tooltipAndGameAreaWrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 0.5em;
}

